// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`header returns a ellipsis for a complicated DOM element 1`] = `
[
  "span",
  {
    "style": "
    color: rgb(168, 148, 166);
  ",
  },
  "<",
  [
    "span",
    {
      "style": "
    color: rgb(136, 18, 128);
  ",
    },
    "div",
  ],
  " ",
  [
    "span",
    {
      "style": "
    color: rgb(153, 69, 0);
    unicode-bidi: -webkit-isolate;
  ",
    },
    "class",
  ],
  "="",
  [
    "span",
    {
      "style": "
    color: rgb(26, 26, 166);
    unicode-bidi: -webkit-isolate;
  ",
    },
    "foo bar baz",
  ],
  """,
  " ",
  [
    "span",
    {
      "style": "
    color: rgb(153, 69, 0);
    unicode-bidi: -webkit-isolate;
  ",
    },
    "id",
  ],
  "="",
  [
    "span",
    {
      "style": "
    color: rgb(26, 26, 166);
    unicode-bidi: -webkit-isolate;
  ",
    },
    "root",
  ],
  """,
  ">",
  [
    "span",
    {
      "style": "
    color: black;
    unicode-bidi: -webkit-isolate;
  ",
    },
    "…",
  ],
  "<",
  [
    "span",
    {
      "style": "
    color: rgb(136, 18, 128);
  ",
    },
    "/div",
  ],
  ">",
]
`;

exports[`header returns summary for a simple DOM element 1`] = `
[
  "span",
  {
    "style": "
    color: rgb(168, 148, 166);
  ",
  },
  "<",
  [
    "span",
    {
      "style": "
    color: rgb(136, 18, 128);
  ",
    },
    "div",
  ],
  ">",
  [
    "span",
    {
      "style": "
    color: black;
    unicode-bidi: -webkit-isolate;
  ",
    },
    "test text",
  ],
  "<",
  [
    "span",
    {
      "style": "
    color: rgb(136, 18, 128);
  ",
    },
    "/div",
  ],
  ">",
]
`;
